--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "razorpay/payments",
+    "name": "razorpay/magento",
     "description": "N/A",
     "require": {
         "php": "~5.5.0|~5.6.0|~7.0.0",
@@ -31,7 +31,7 @@
             "registration.php"
         ],
         "psr-4": {
-            "Razorpay\\Payments\\": ""
+            "Razorpay\\Magento\\": ""
         }
     }
 }
