--- a/package.xml
+++ b/package.xml
@@ -16,28 +16,28 @@
             <email>vivek@razorpay.com</email>
         </author>
     </authors>
-    <date>2016-04-08</date>
-    <time>14:52:30</time>
+    <date>2016-04-09</date>
+    <time>17:36:04</time>
     <contents>
         <target name="magecommunity">
             <dir name="Razorpay">
                 <dir name="Payments">
                     <dir name="Block">
-                        <file name="Placeorder.php" hash="09ad9b449bf873a6b2b3bce55923219b"/>
-                        <file name="Setuputils.php" hash="3d38f8ba62b42fc4decb7dbc7d4e8e1e"/>
+                        <file hash="09ad9b449bf873a6b2b3bce55923219b" name="Placeorder.php"/>
+                        <file hash="3d38f8ba62b42fc4decb7dbc7d4e8e1e" name="Setuputils.php"/>
                     </dir>
                     <dir name="Helper">
-                        <file name="Data.php" hash="3eb01c681f348c86a4ec3c7dc7855439"/>
+                        <file hash="3eb01c681f348c86a4ec3c7dc7855439" name="Data.php"/>
                     </dir>
                     <dir name="Model">
-                        <file name="Paymentmethod.php" hash="0fbad0dbec0c8dcf1d597a4a3d15b1c7"/>
+                        <file hash="0fbad0dbec0c8dcf1d597a4a3d15b1c7" name="Paymentmethod.php"/>
                     </dir>
                     <dir name="controllers">
-                        <file name="CheckoutController.php" hash="e50ee030f720f26ef439a1dc6b8c66f8"/>
+                        <file hash="e50ee030f720f26ef439a1dc6b8c66f8" name="CheckoutController.php"/>
                     </dir>
                     <dir name="etc">
-                        <file name="config.xml" hash="2686b409f17d4c9466fa0efc7f8d00b3"/>
-                        <file name="system.xml" hash="890c3193ccf85870cb0bd25f31ddf076"/>
+                        <file hash="2686b409f17d4c9466fa0efc7f8d00b3" name="config.xml"/>
+                        <file hash="890c3193ccf85870cb0bd25f31ddf076" name="system.xml"/>
                     </dir>
                 </dir>
             </dir>
@@ -47,18 +47,18 @@
                 <dir name="base">
                     <dir name="default">
                         <dir name="layout">
-                            <file name="razorpay.xml" hash="c0098eef0d3e3571a97834c9cdfd90d5"/>
+                            <file hash="c0098eef0d3e3571a97834c9cdfd90d5" name="razorpay.xml"/>
                         </dir>
                         <dir name="template">
                             <dir name="razorpay">
                                 <dir name="extensions">
                                     <dir name="iwd_opc">
-                                        <file name="payments.phtml" hash="195d90aed4db69cdef2eeb578a780b46"/>
+                                        <file hash="b5525d043934d55eda8bfb90a89efcd9" name="payments.phtml"/>
                                     </dir>
                                 </dir>
-                                <file name="order.phtml" hash="1493e996886160b37b930251f7ac78ce"/>
-                                <file name="placeorder.phtml" hash="fb8f5945e404a55be6c7c86038d6d77b"/>
-                                <file name="setuputils.phtml" hash="a4257d4ba888ce8c8c943e08ac052240"/>
+                                <file hash="1493e996886160b37b930251f7ac78ce" name="order.phtml"/>
+                                <file hash="fb8f5945e404a55be6c7c86038d6d77b" name="placeorder.phtml"/>
+                                <file hash="a4257d4ba888ce8c8c943e08ac052240" name="setuputils.phtml"/>
                             </dir>
                         </dir>
                     </dir>
@@ -67,13 +67,13 @@
         </target>
         <target name="mageetc">
             <dir name="modules">
-                <file name="Razorpay_Payments.xml" hash="84978ab3d49e7f70fc8e1aa00cb2dc36"/>
+                <file hash="84978ab3d49e7f70fc8e1aa00cb2dc36" name="Razorpay_Payments.xml"/>
             </dir>
         </target>
         <target name="mage">
             <dir name="js">
                 <dir name="razorpay">
-                    <file name="razorpay-utils.js" hash="0e0cc3ec6b477a1fb397951141f1ca35"/>
+                    <file hash="0e0cc3ec6b477a1fb397951141f1ca35" name="razorpay-utils.js"/>
                 </dir>
             </dir>
         </target>
