--- a/package.xml
+++ b/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <package>
     <name>Razorpay_Payments</name>
-    <version>0.2.1</version>
+    <version>0.2.2</version>
     <stability>beta</stability>
     <license>MIT</license>
     <channel>community</channel>
@@ -16,8 +16,8 @@
             <email>vivek@razorpay.com</email>
         </author>
     </authors>
-    <date>2016-04-09</date>
-    <time>17:36:04</time>
+    <date>2016-04-11</date>
+    <time>12:30:48</time>
     <contents>
         <target name="magecommunity">
             <dir name="Razorpay">
@@ -30,13 +30,13 @@
                         <file hash="3eb01c681f348c86a4ec3c7dc7855439" name="Data.php"/>
                     </dir>
                     <dir name="Model">
-                        <file hash="0fbad0dbec0c8dcf1d597a4a3d15b1c7" name="Paymentmethod.php"/>
+                        <file hash="894e998fb9cdc2da005e418240ad4e65" name="Paymentmethod.php"/>
                     </dir>
                     <dir name="controllers">
                         <file hash="e50ee030f720f26ef439a1dc6b8c66f8" name="CheckoutController.php"/>
                     </dir>
                     <dir name="etc">
-                        <file hash="2686b409f17d4c9466fa0efc7f8d00b3" name="config.xml"/>
+                        <file hash="ac5ef3a3615dcd41b4fea208aec70276" name="config.xml"/>
                         <file hash="890c3193ccf85870cb0bd25f31ddf076" name="system.xml"/>
                     </dir>
                 </dir>
@@ -47,11 +47,14 @@
                 <dir name="base">
                     <dir name="default">
                         <dir name="layout">
-                            <file hash="c0098eef0d3e3571a97834c9cdfd90d5" name="razorpay.xml"/>
+                            <file hash="38102684ebb4f6d3896b724632d39171" name="razorpay.xml"/>
                         </dir>
                         <dir name="template">
                             <dir name="razorpay">
                                 <dir name="extensions">
+                                    <dir name="firecheckout">
+                                        <file hash="94d637cf1486510e95f7b23f95b6efe4" name="payments.phtml"/>
+                                    </dir>
                                     <dir name="iwd_opc">
                                         <file hash="b5525d043934d55eda8bfb90a89efcd9" name="payments.phtml"/>
                                     </dir>
