Multiple authors feature has been added to package.xml

--- a/package.xml
+++ b/package.xml
@@ -14,9 +14,13 @@
             <name>Abhay Rana</name>
             <user>captn3mO</user>
             <email>nemo@razorpay.com</email>
+        </author>
+        <author>
             <name>Vivek Kumar</name>
             <user>crims0n</user>
             <email>vivek@razorpay.com</email>
+        </author>
+        <author>
             <name>Mayank Amencherla</name>
             <user>mayank</user>
             <email>mayank.amencherla@razorpay.com</email>
