--- a/package.xml
+++ b/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <package>
     <name>Razorpay</name>
-    <version>1.1.10</version>
+    <version>1.1.11</version>
     <stability>stable</stability>
     <license>MIT</license>
     <channel>community</channel>
@@ -11,9 +11,9 @@
     <notes>This version uses the Razorpay API v1 for the best possible experience.</notes>
     <authors>
         <author>
-            <name>Abhay Rana</name>
-            <user>captn3mO</user>
-            <email>nemo@razorpay.com</email>
+            <name>Mayank Amencherla</name>
+            <user>mayankamencherla</user>
+            <email>mayank.amencherla@razorpay.com</email>
         </author>
         <author>
             <name>Vivek Kumar</name>
@@ -26,30 +26,30 @@
             <email>mayank.amencherla@razorpay.com</email>
         </author>
     </authors>
-    <date>2016-10-18</date>
-    <time>15:37:59</time>
+    <date>2016-11-24</date>
+    <time>14:22:16</time>
     <contents>
         <target name="magecommunity">
             <dir name="Razorpay">
                 <dir name="Payments">
-                    <dir>
-                        <dir name="Block">
-                            <file hash="15049195e1e3d519298a3bd5095990fe" name="Checkout.php"/>
-                        </dir>
-                        <dir name="Helper">
-                            <file hash="bbf4955d0095e8f53022936eca12aab6" name="Data.php"/>
-                            <file hash="308c55e7a7d56a27fcfb3983169c3491" name="ca-bundle.crt"/>
-                        </dir>
-                        <dir name="Model">
-                            <file hash="3a06966d04bb508ff85ec8a355a7f943" name="Paymentmethod.php"/>
-                        </dir>
-                        <dir name="controllers">
-                            <file hash="d7b1742fe6f37803208a93795915a81b" name="CheckoutController.php"/>
-                        </dir>
-                        <dir name="etc">
-                            <file hash="ee05ae1c78daa8f263de0f3c6d25a9df" name="config.xml"/>
-                            <file hash="3045e0b5d2d2d0b52e47c23a64f99445" name="system.xml"/>
-                        </dir>
+                    <dir name="Block">
+                        <file hash="15049195e1e3d519298a3bd5095990fe" name="Checkout.php"/>
+                        <file hash="09ad9b449bf873a6b2b3bce55923219b" name="Placeorder.php"/>
+                        <file hash="3d38f8ba62b42fc4decb7dbc7d4e8e1e" name="Setuputils.php"/>
+                    </dir>
+                    <dir name="Helper">
+                        <file hash="bbf4955d0095e8f53022936eca12aab6" name="Data.php"/>
+                        <file hash="308c55e7a7d56a27fcfb3983169c3491" name="ca-bundle.crt"/>
+                    </dir>
+                    <dir name="Model">
+                        <file hash="9010f9914121e6772a2804633c2838b8" name="Paymentmethod.php"/>
+                    </dir>
+                    <dir name="controllers">
+                        <file hash="6828300fcebf068f19209504cacd9dd7" name="CheckoutController.php"/>
+                    </dir>
+                    <dir name="etc">
+                        <file hash="882222bd136679604c7a0e3351cd67c9" name="config.xml"/>
+                        <file hash="3045e0b5d2d2d0b52e47c23a64f99445" name="system.xml"/>
                     </dir>
                 </dir>
             </dir>
@@ -59,7 +59,7 @@
                 <dir name="base">
                     <dir name="default">
                         <dir name="layout">
-                            <file hash="733e8107f58a1a76fc13f5b11090a6df" name="razorpay.xml"/>
+                            <file hash="34d6bfaa979b0e0a17bd8c7ed1558daa" name="razorpay.xml"/>
                         </dir>
                         <dir name="template">
                             <dir name="razorpay">
