Added v2.2.0 tag for new plugin with multi-currency support

--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,11 @@
             "name": "Vivek",
             "email": "vivek@razorpay.com",
             "role": "Developer"
+        },
+        {
+            "name": "Mayank Amencherla",
+            "email": "mayank.amencherla@razorpay.com",
+            "role": "Developer"
         }
     ],
     "support": {
