--- a/package.xml
+++ b/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <package>
     <name>Razorpay</name>
-    <version>1.1.13</version>
+    <version>1.1.14</version>
     <stability>stable</stability>
     <license>MIT</license>
     <channel>community</channel>
@@ -26,8 +26,8 @@
             <email>vivek@razorpay.com</email>
         </author>
     </authors>
-    <date>2017-01-15</date>
-    <time>18:52:40</time>
+    <date>2017-02-06</date>
+    <time>12:32:06</time>
     <contents>
         <target name="magecommunity">
             <dir name="Razorpay">
@@ -40,13 +40,13 @@
                         <file hash="308c55e7a7d56a27fcfb3983169c3491" name="ca-bundle.crt"/>
                     </dir>
                     <dir name="Model">
-                        <file hash="a46c3b59469714524acec4702394a659" name="Paymentmethod.php"/>
+                        <file hash="d816dc47ea40d1a4e2ed9169480eacb2" name="Paymentmethod.php"/>
                     </dir>
                     <dir name="controllers">
-                        <file hash="6828300fcebf068f19209504cacd9dd7" name="CheckoutController.php"/>
+                        <file hash="548f8a2241fd5989486883608a5495af" name="CheckoutController.php"/>
                     </dir>
                     <dir name="etc">
-                        <file hash="1e19742b383a22af4518394c6a5e9a93" name="config.xml"/>
+                        <file hash="0309a3b668bcc43cdc8e5d8b2fa2e856" name="config.xml"/>
                         <file hash="3045e0b5d2d2d0b52e47c23a64f99445" name="system.xml"/>
                     </dir>
                 </dir>
@@ -57,12 +57,10 @@
                 <dir name="base">
                     <dir name="default">
                         <dir name="layout">
-                            <file hash="34d6bfaa979b0e0a17bd8c7ed1558daa" name="razorpay.xml"/>
+                            <file hash="451d2f5f0596e8a51b9e29946b52eadf" name="razorpay.xml"/>
                         </dir>
                         <dir name="template">
-                            <dir name="razorpay">
-                                <file hash="568d98738658141ef1ce47edc5363494" name="checkout.phtml"/>
-                            </dir>
+                            <file hash="" name="checkout.phtml"/>
                         </dir>
                     </dir>
                 </dir>
