--- a/package.xml
+++ b/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <package>
     <name>Razorpay</name>
-    <version>1.1.15</version>
+    <version>1.1.16</version>
     <stability>devel</stability>
     <license>MIT</license>
     <channel>community</channel>
@@ -26,8 +26,8 @@
             <email>nemo@razorpay.com</email>
         </author>
     </authors>
-    <date>2017-02-25</date>
-    <time>10:15:09</time>
+    <date>2017-03-09</date>
+    <time>18:31:20</time>
     <contents>
         <target name="magecommunity">
             <dir name="Razorpay">
@@ -40,33 +40,14 @@
                         <file hash="308c55e7a7d56a27fcfb3983169c3491" name="ca-bundle.crt"/>
                     </dir>
                     <dir name="Model">
-                        <file hash="381cf3abf3acd93bc83f0225c72edf61" name="Paymentmethod.php"/>
+                        <file hash="a83e1a7a1bdb14a9e67c2be4d22c5fc1" name="Paymentmethod.php"/>
                     </dir>
                     <dir name="controllers">
                         <file hash="548f8a2241fd5989486883608a5495af" name="CheckoutController.php"/>
                     </dir>
                     <dir name="etc">
-                        <file hash="0309a3b668bcc43cdc8e5d8b2fa2e856" name="config.xml"/>
+                        <file hash="0abcefdbb8f6b8a4f364b412440b5b89" name="config.xml"/>
                         <file hash="3045e0b5d2d2d0b52e47c23a64f99445" name="system.xml"/>
-                    </dir>
-                </dir>
-            </dir>
-        </target>
-        <target name="mageetc">
-            <dir name="modules">
-                <file hash="84978ab3d49e7f70fc8e1aa00cb2dc36" name="Razorpay_Payments.xml"/>
-            </dir>
-        </target>
-        <target name="magedesign">
-            <dir name="frontend">
-                <dir name="base">
-                    <dir name="default">
-                        <dir name="layout">
-                            <file hash="451d2f5f0596e8a51b9e29946b52eadf" name="razorpay.xml"/>
-                        </dir>
-                        <dir name="template">
-                            <file hash="" name="checkout.phtml"/>
-                        </dir>
                     </dir>
                 </dir>
             </dir>
@@ -76,6 +57,27 @@
                 <dir name="razorpay">
                     <file hash="67e54789bb3f1723dcff535273ad961c" name="razorpay-utils.js"/>
                 </dir>
+            </dir>
+        </target>
+        <target name="magedesign">
+            <dir name="frontend">
+                <dir name="base">
+                    <dir name="default">
+                        <dir name="layout">
+                            <file hash="94104af1ba1223fafe42b3d6146028bb" name="razorpay.xml"/>
+                        </dir>
+                        <dir name="template">
+                            <dir name="razorpay">
+                                <file hash="557c96239438d1864595f6d9e75253b5" name="checkout.phtml"/>
+                            </dir>
+                        </dir>
+                    </dir>
+                </dir>
+            </dir>
+        </target>
+        <target name="mageetc">
+            <dir name="modules">
+                <file hash="84978ab3d49e7f70fc8e1aa00cb2dc36" name="Razorpay_Payments.xml"/>
             </dir>
         </target>
     </contents>
