--- a/package.xml
+++ b/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package>
     <name>Razorpay</name>
-    <version>1.1.20</version>
-    <stability>stable</stability>
+    <version>1.1.21</version>
+    <stability>devel</stability>
     <license>MIT</license>
     <channel>community</channel>
     <extends/>
@@ -26,8 +26,8 @@
             <email>nemo@razorpay.com</email>
         </author>
     </authors>
-    <date>2017-05-03</date>
-    <time>14:36:24</time>
+    <date>2017-06-02</date>
+    <time>12:08:51</time>
     <contents>
         <target name="magecommunity">
             <dir name="Razorpay">
@@ -40,13 +40,13 @@
                         <file hash="308c55e7a7d56a27fcfb3983169c3491" name="ca-bundle.crt"/>
                     </dir>
                     <dir name="Model">
-                        <file hash="486fb13099bc314b340b8199a97bd62f" name="Paymentmethod.php"/>
+                        <file hash="047e980e649899ad81a6b1d20897071a" name="Paymentmethod.php"/>
                     </dir>
                     <dir name="controllers">
-                        <file hash="548f8a2241fd5989486883608a5495af" name="CheckoutController.php"/>
+                        <file hash="0b2d6c07ed86081eb8febcf0f42783f0" name="CheckoutController.php"/>
                     </dir>
                     <dir name="etc">
-                        <file hash="e40f8d34e18eb021d1f7eb981a4bd72f" name="config.xml"/>
+                        <file hash="c57d918e0cbdc579dbda48882bec4577" name="config.xml"/>
                         <file hash="3045e0b5d2d2d0b52e47c23a64f99445" name="system.xml"/>
                     </dir>
                 </dir>
@@ -64,7 +64,7 @@
                 <dir name="base">
                     <dir name="default">
                         <dir name="layout">
-                            <file hash="e13858192949e141b26571361bee0c0a" name="razorpay.xml"/>
+                            <file hash="961142f9df434dfbb4322dcf0db33733" name="razorpay.xml"/>
                         </dir>
                         <dir name="template">
                             <dir name="razorpay">
